# PDF-to-Markdown

./: .gitignore  README.md  convert.py  pyproject.toml  requirements.txt
src/pdf_to_markdown/: __init__.py  builder.py  cli.py  converter.py  extractor.py  ocr.py
