[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-to-markdown"
version = "0.1.0"
description = "Convert PDF documents to Markdown with embedded image extraction and optional OCR"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
    "PyMuPDF>=1.24.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
ocr = ["pytesseract>=0.3.10"]

[project.scripts]
pdf2markdown = "pdf_to_markdown.cli:main"

[project.urls]
Homepage = "https://github.com/blakete/PDF-to-Markdown"
Repository = "https://github.com/blakete/PDF-to-Markdown"

[tool.setuptools.packages.find]
where = ["src"]
